final host not yet css

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
 footer {
   background-color: #f2f2f2;
   padding: 25px;
+  /* position: sticky;
+  left: 0 ;
+  bottom: 0 ;
+  width: 100% */
 }
 .wells
 {
