--- a/css/host.css
+++ b/css/host.css
@@ -20,8 +20,18 @@ table.getListing tr, th, td
 }
 .show_detail
 {
-  text-align: right ;
+  text-align: left ;
   margin: 10px auto ;
   font-size: 1.25em ;
-  width: 500px ;
+  width: 700px ;
+}
+.photo_div
+{
+  text-align: left ;
+  margin: 1px auto ;
+  width: 600px ;
+}
+.pointer
+{
+  cursor: pointer ;
 }
